--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,75 @@
-* { box-sizing: border-box; } body {margin: 0;}.gjs-row{display:flex;justify-content:flex-start;align-items:stretch;flex-wrap:nowrap;padding:10px;}.gjs-cell{min-height:75px;flex-grow:1;flex-basis:100%;}#irnc{height:146px;float:none;color:black;opacity:1;background-repeat:repeat;background-position:left top;background-attachment:scroll;background-size:auto;background-image:linear-gradient(#000000 0%, #000000 100%);}#ijbi{color:black;}#i9mj{background-repeat:repeat;background-position:left top;background-attachment:scroll;background-size:auto;background-image:linear-gradient(#4c4c4c 0%, #4c4c4c 100%);}#ii1g{color:white;opacity:1;font-size:80px;display:flex;align-items:center;justify-content:center;}#iptj{font-size:40px;}#idk8{padding:10px;color:lightgrey;}#iec3u{padding:10px;}#iyxi6{font-size:30px;}#ihour{font-size:40px;color:lightgrey;}#ixxqa{padding:10px;}#i4xpx{padding:10px;}@media (max-width: 768px){.gjs-row{flex-wrap:wrap;}}
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+}
+.gjs-row{
+  display:flex;
+  justify-content:flex-start;
+  align-items:stretch;
+  flex-wrap:nowrap;
+  padding:10px;
+}
+.gjs-cell{
+  min-height:75px;
+  flex-grow:1;
+  flex-basis:100%;
+}
+#irnc{
+  height:146px;
+  float:none;
+  color:black;
+  opacity:1;
+  background-repeat:repeat;
+  background-position:left top;
+  background-attachment:scroll;
+  background-size:auto;
+  background-image:linear-gradient(#000000 0%, #000000 100%);
+}
+#ijbi{
+  color:black;
+}
+#i9mj{
+  background-repeat:repeat;
+  background-position:left top;
+  background-attachment:scroll;
+  background-size:auto;
+  background-image:linear-gradient(#4c4c4c 0%, #4c4c4c 100%);
+}
+#ii1g{
+  color:white;
+  opacity:1;
+  font-size:80px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+#iptj{
+  font-size:40px;
+}
+#idk8{
+  padding:10px;
+  color:lightgrey;
+}
+#iec3u{
+  padding:10px;
+}
+#iyxi6{
+  font-size:30px;
+}
+#ihour{
+  font-size:40px;
+  color:lightgrey;
+}
+#ixxqa{
+  padding:10px;
+}
+#i4xpx{
+  padding:10px;
+}
+@media (max-width: 768px){
+  .gjs-row{
+    flex-wrap:wrap;
+  }
+}
